--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "rest-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,5 +23,6 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.3",
     "nanoid": "^3.1.23"
-  }
+  },
+  "description": ""
 }
