Add Onboarding Screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foories"
         tools:ignore="AllowBackup">
+        <activity
+            android:name=".presentation.onboarding.OnboardingScreenActivity"
+            android:theme="@style/OnboardingTheme" />
         <activity android:name=".presentation.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
