--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,12 @@ dependencies {
     //Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
 
+    //Koin
+    implementation "io.insert-koin:koin-android:3.0.2"
+
+    //Activity
+    implementation "androidx.activity:activity-ktx:1.2.3"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
