--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ dependencies {
     //Activity
     implementation "androidx.activity:activity-ktx:1.2.3"
 
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
