--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".App"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Foories"
         tools:ignore="AllowBackup">
+        <activity
+            android:name=".presentation.screening.SuccessActivity"
+            android:theme="@style/OnboardingTheme" />
         <activity
             android:name=".presentation.screening.ScreeningActivity"
             android:theme="@style/OnboardingTheme" />
