--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,22 @@ android {
     buildFeatures{
         viewBinding = true
     }
+    buildscript {
+        repositories {
+            maven { url 'https://google.bintray.com/tensorflow'}
+        }
+    }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
 }
 
 dependencies {
     def retrofit_version = "2.9.0"
     def room_version = "2.3.0"
 
+    //Viewpager
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
     //Coroutine
@@ -59,6 +69,14 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    //Misc
+    implementation 'com.karumi:dexter:6.2.2'
+    implementation 'androidx.exifinterface:exifinterface:1.3.2'
+
+    //Tensorflow
+    implementation 'org.tensorflow:tensorflow-android:1.13.1'
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
