--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true,
-        "node": true
+        "es2021": true
     },
     "extends": [
         "google"
