--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ dependencies {
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
 
     //Tensorflow
-    compile(name:'tensorflow-lite', ext:'aar')
+    implementation(name:'tensorflow-lite', ext:'aar')
 
     //Firebase
     implementation platform('com.google.firebase:firebase-bom:28.0.1')
