--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "bookself-api",
+  "name": "cal-api",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodem ./src/server.js",
+    "start": "node ./src/server.js",
+    "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "firebase-admin": "^9.9.0",
+    "graphql": "^15.5.0",
     "nanoid": "^3.1.22"
   },
   "devDependencies": {
-    "eslint": "^7.25.0",
+    "eslint": "^7.27.0",
     "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.7"
   }
