--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ android {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     def retrofit_version = "2.9.0"
     def room_version = "2.3.0"
 
@@ -62,8 +63,9 @@ dependencies {
     //Koin
     implementation "io.insert-koin:koin-android:3.0.2"
 
-    //Activity
+    //Activity and Fragment
     implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation "androidx.fragment:fragment-ktx:1.3.4"
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -76,6 +78,7 @@ dependencies {
     //Misc
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
+    implementation 'com.google.android.material:material:1.3.0'
 
     //Tensorflow
     implementation(name:'tensorflow-lite', ext:'aar')
